--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@ plugins {
     id 'maven-publish'
     id 'net.minecraftforge.gradle' version '5.1.+'
     id 'org.spongepowered.mixin' version '0.7.+'
+    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
 }
+//apply plugin: 'eclipse'
 
-version = '1.19.4-1.0.0.0'
+version = '1.19.4-1.0.1.3'
 group = 'link.mdks.beenomey' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'beenomey'
 
@@ -27,7 +29,10 @@ minecraft {
     //
     // Use non-default mappings at your own risk. They may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'official', version: '1.19.4'
+    //mappings channel: 'official', version: '1.19.4'
+    //mappings channel: 'parchment', version: '2023.06.25-1.19.3'
+    mappings channel: 'parchment', version: '1.19.3-2023.06.25-1.19.4'
+    
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
 
@@ -128,7 +133,18 @@ repositories {
         name = 'GeckoLib'
         url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'  
     }
-    //maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
+	maven {
+    	// location of the maven that hosts JEI files since January 2023
+    	name = "Jared's maven"
+    	url = "https://maven.blamejared.com/"
+	}
+	
+	maven {
+    	// location of a maven mirror for JEI files, as a fallback
+    	name = "ModMaven"
+    	url = "https://modmaven.dev"
+	}
+    
 }
 
 dependencies {
@@ -138,6 +154,13 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.19.4-45.1.16'
 
 	implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.19.4:4.2')
+
+	// compile against the JEI API but do not include it at runtime
+	compileOnly(fg.deobf("mezz.jei:jei-${jei_mc_version}-common-api:${jei_version}"))
+	compileOnly(fg.deobf("mezz.jei:jei-${jei_mc_version}-forge-api:${jei_version}"))
+	// at runtime, use the full JEI jar for Forge
+	runtimeOnly(fg.deobf("mezz.jei:jei-${jei_mc_version}-forge:${jei_version}"))
+
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // implementation fg.deobf("com.tterrag.registrate:Registrate:MC${mc_version}-${registrate_version}") // Adds registrate as a dependency
