--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+jei_mc_version=1.19.4
+#jei_version=11.5.0.297
+jei_version=13.1.0.15
